--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,8 +9,43 @@
 </head>
 <body>
 
-    <div class="container">
-        AAAAAA
+    <div class="container pt-4 pb-4">
+        <form action="#" class="mb-4">
+            <div class="mb-3">
+                <input class="form-control" type="text" id="mame-inp" placeholder="Name">
+            </div> 
+            <div class="mb-3">
+                <input class="form-control" type="text" id="last-inp" placeholder="Lastname">
+            </div> 
+            <div class="mb-3">
+                <input class="form-control" type="text" id="surname-inp" placeholder="Surname">
+            </div>
+            <div class="mb-3">
+                <input class="form-control" type="date" id="birthday-inp">
+            </div>
+            <div class="mb-3">
+                <input class="form-control" type="text" id="faculty-inp" placeholder="Faculty">
+            </div>
+            <div class="mb-3">
+                <input class="form-control" type="number" id="start-inp" placeholder="Date of entry">
+            </div>
+            <button type="submit" class="btn btn-primary">Add</button>
+        </form>
+
+        <!-- Table -->
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>LNS</th>
+                    <th>Date of birth</th>
+                    <th>Faculty</th>
+                    <th>Date of entry</th>
+                </tr>
+            </thead>
+            <tbody id="stud-table">
+               
+            </tbody>
+        </table>
     </div>
     
     <script defer src="js/index.js"></script>
