create functions to add and render a new student

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,9 +10,9 @@
 <body>
 
     <div class="container pt-4 pb-4">
-        <form action="#" class="mb-4">
+        <form action="#" class="mb-4" id="add-form">
             <div class="mb-3">
-                <input class="form-control" type="text" id="mame-inp" placeholder="Name">
+                <input class="form-control" type="text" id="name-inp" placeholder="Name">
             </div> 
             <div class="mb-3">
                 <input class="form-control" type="text" id="last-inp" placeholder="Lastname">
