--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,7 +27,7 @@
                 <input class="form-control" type="text" id="faculty-inp" placeholder="Faculty">
             </div>
             <div class="mb-3">
-                <input class="form-control" type="number" id="start-inp" placeholder="Date of entry">
+                <input class="form-control" type="number" id="studyStart-inp" placeholder="Date of entry">
             </div>
             <button type="submit" class="btn btn-primary">Add</button>
         </form>
@@ -40,6 +40,7 @@
                     <th>Date of birth</th>
                     <th>Faculty</th>
                     <th>Date of entry</th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody id="stud-table">
@@ -48,6 +49,6 @@
         </table>
     </div>
     
-    <script defer src="js/index.js"></script>
+    <script defer type='module' src="js/index.js"></script>
 </body>
 </html>
